--- a/week3/index.html
+++ b/week3/index.html
@@ -35,6 +35,9 @@
         </div>
         
         <div class="content-wrapper">
+            <div class="burger__menu">
+                <img src="./img/menu.png" alt="">
+            </div>
             <div class="content">
                 <div class="content__topside">
                     <div class="content__mainText">
